fixed the username link spacing

--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -208,6 +208,7 @@
 {
 	float:left;
 	margin-left:10px;
+	width:50px;
 }
 
 .usernamePoints
